--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* background: blue; */
+  width: calc(100vw * 3);
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 50vh 50vw;
 }
 
-.App-link {
-  color: #61dafb;
+.section {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  grid-gap: 20px;
+  /* background: white !important; */
+  /* box-shadow: inset 0 0 20px #0f0, inset 0 0 20px #0f0, inset 0 0 20px #0f0; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section img {
+  width: 200px; /* make this dynamic 100vw / gallery.length */
+  opacity: 0;
+  transition: opacity 0.5s linear;
+  background: black;
+}
+
+.bg-red {
+  background: red;
+}
+.bg-yellow {
+  background: yellow;
+}
+.bg-pink {
+  background: pink;
+}
+.bg-orange {
+  background: orange;
+}
+.bg-green {
+  background: green;
+}
+.bg-purple {
+  background: purple;
+}
+.bg-darksalmon {
+  background: darksalmon;
+}
+.bg-darkturquoise {
+  background: darkturquoise;
+}
+.bg-lightgoldenrodyellow {
+  background: lightgoldenrodyellow;
 }
